--- a/data/index.html
+++ b/data/index.html
@@ -43,7 +43,7 @@
         <title>MyJavaSript</title>
     </head>
     <body>
-        <h1 id="nig">MY ESP 8266 SERVER</h1>
+        <h1>MY ESP 8266 SERVER</h1>
         <button id ="display" type="button" class = "button button1" onclick="myFunc()">TURN ON</button>
     </body>
 </html>
