--- a/data/index.html
+++ b/data/index.html
@@ -4,28 +4,48 @@
 
     <head>
         <script>
-        let count = 0;
-        function TurnOnLed(){
-            fetch("http://192.168.10.1/turn_on_led")
-            .then(responnse => responnse.json);
-        }
-
-        function TurnOffLed(){
-            fetch("http://192.168.10.1/turn_off_led")
-                .then(responnse => responnse.json);
-        }
-            function myFunc(){
-                if(count == 0){
-                    document.getElementById("display").innerHTML = "TURN ON";
-                    TurnOffLed();
-                    count++;
+            const TurnLed = class{
+                constructor(ip_on,ip_off,id){
+                    this.ip_on = ip_on;
+                    this.ip_off = ip_off;
+                    this.id = id;
                 }
-                else{
-                    document.getElementById("display").innerHTML = "TURN OFF";
-                    TurnOnLed();
-                    count = 0;
-                }  
+                turn(){
+                    this.counter ;
+                    console.log(this.counter);
+                    if(this.counter == 0){
+                        fetch(this.ip_on)
+                        .then(respone=>respone.json());
+                        document.getElementById(this.id).innerHTML = "TURN OFF";
+                        this.counter++;
+                    }
+                    else{
+                        fetch(this.ip_off)
+                        .then(respone=>respone.json());
+                        document.getElementById(this.id).innerHTML = "TURN ON";
+                        this.counter = 0;
+                    }
+                }
             }
+        
+            //LED_GREEN
+            const led_g_on = "http://192.168.10.1/led_g_on";
+            const led_g_off = "http://192.168.10.1/led_g_off";
+
+            const Led_green = new TurnLed(led_g_on,led_g_off,"g_id");
+
+             //LED_RED
+            const led_r_on = "http://192.168.10.1/led_r_on";
+            const led_r_off = "http://192.168.10.1/led_r_off";
+
+            const Led_red = new TurnLed(led_r_on,led_r_off,"r_id");
+
+            //LED_YELLOW
+            const led_y_on = "http://192.168.10.1/led_y_on";
+            const led_y_off = "http://192.168.10.1/led_y_off";
+
+            const Led_yellow = new TurnLed(led_y_on,led_y_off,"y_id");
+
         </script>
         <style>
             .button{
@@ -33,17 +53,24 @@
                 font-size: large;
                 color: white;
                 padding: 64px 64px;
-                background-color: blue;
                 cursor: pointer;
-                transition-duration: 200;
             }
+            .button1{background-color: rgb(102, 255, 31);}
+            .button1:hover{background-color: rgb(173, 255, 118); }
 
-            .button1:hover{background-color: rgb(121, 121, 165);};
+            .button2{background-color: rgb(255, 55, 55);}
+            .button2:hover{background-color: rgb(255, 142, 142); }
+
+            .button3{background-color: rgb(255, 224, 51);}
+            .button3:hover{background-color: rgb(253, 251, 109); }
         </style>
         <title>MyJavaSript</title>
     </head>
     <body>
         <h1>MY ESP 8266 SERVER</h1>
-        <button id ="display" type="button" class = "button button1" onclick="myFunc()">TURN ON</button>
+
+        <p1><button id = r_id  type="button" onclick="Led_red.turn()" class = "button button2">TURN ON</button></p1>
+        <p2><button id = y_id  type="button" onclick="Led_yellow.turn()" class = "button button3">TURN ON</button></p2>
+        <p3><button id = g_id  type="button" onclick="Led_green.turn()" class = "button button1">TURN ON</button></p3>
     </body>
 </html>
